// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuoteList /> should render 1`] = `
<div>
  <button
    className="btn btn-primary btn-block"
    onClick={[Function]}
    type="button"
  >
    Get one more quote
  </button>
</div>
`;

exports[`<QuoteList /> should render quote list with N quotes 1`] = `
<div>
  <Quote
    content="Content"
    link="Link"
    title="Title"
  />
  <button
    className="btn btn-primary btn-block"
    onClick={[Function]}
    type="button"
  >
    Get one more quote
  </button>
</div>
`;
